[gd_scene load_steps=6 format=2]

[ext_resource path="res://joc lluita/personatges_escena/personatge1.gd" type="Script" id=1]
[ext_resource path="res://joc lluita/hud/TextureProgress.tscn" type="PackedScene" id=2]
[ext_resource path="res://joc lluita/personatges/ca√ßadora.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.6508, 28.2461 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.4144, 34.8462 )

[node name="personatge1" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.120529, -2.18549 )
shape = SubResource( 1 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="mort" type="Timer" parent="."]
one_shot = true

[node name="espera" type="Timer" parent="."]
one_shot = true

[node name="TextureProgress" parent="." instance=ExtResource( 2 )]

[node name="espasa" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="espasa"]
position = Vector2( 37.6534, -9.36916 )
shape = SubResource( 2 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 4 )]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="mort" to="." method="_on_mort_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="espasa" to="." method="_on_espasa_body_entered"]
